# rss2newsletter

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  newsletter_template.html  pyproject.toml  rss2newsletter  rss2newsletter.conf  rss2newsletter.py
